[package]

name = "confsolve"
version = "0.1.5"
authors = ["Daniel Trstenjak <daniel.trstenjak@gmail.com>"]
license = "BSD-3-Clause"
description = "Command line tool for resolving Dropbox/Wuala conflicts"
repository = "https://github.com/dan-t/rust-confsolve"
readme = "README.md"

[dependencies]
term = "~0.2.2"
